<resources>
    <string name="app_name">FT Hangouts</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Contacts</string>
    <string name="second_fragment_label">Contact details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Added strings -->
    <string name="change_header_color">Change Header Color</string>
    <string name="change_language">Change Language</string>
    <string name="language_english">English</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_changed">Language changed successfully. The app will restart.</string>
    <string name="background_time">App was in background at %s</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="no_contacts">No contacts available</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="send_message">Send Message</string>
    <string name="message_hint">Type a message</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="defaultName">John Doe </string>
    <string name="tipName">Full name </string>
    <string name="defaultPhone">910002001 </string>
    <string name="tipPhone">Write the full number </string>
    <string name="confirm_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="contact_deleted">Contact deleted successfully</string>
    <string name="name_required">Name is required</string>
    <string name="phone_required">Phone is required </string>

    <string name="contact_added">Contact added successfully</string>
    <string name="contact_updated">Contact updated successfully</string>

    <string name="data_management">Data Management</string>
    <string name="clear_all_messages">Clear All Messages</string>
    <string name="clear_all_contacts">Clear All Contacts</string>
    <string name="confirm_clear_messages">Are you sure you want to delete all messages? This action cannot be undone.</string>
    <string name="confirm_clear_contacts">Are you sure you want to delete all contacts and their messages? This action cannot be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="messages_cleared">All messages have been deleted</string>
    <string name="contacts_cleared">All contacts have been deleted</string>


</resources>